# geyser-websocket-plugin

./: Cargo.toml  Dockerfile  README.md  config.json  deny.toml  diesel.toml  docker-compose.yml  run.sh  rust-toolchain.toml
migrations/2024-07-17-201744_create_transaction/: down.sql  up.sql
src/: client.rs  config.rs  database.rs  entrypoint.rs  lib.rs  metrics.rs  plugin.rs  rpc_pubsub.rs  schema.rs  server.rs  service.rs
src/types/: account.rs  channel_message.rs  filters.rs  mod.rs  rpc.rs  slot_info.rs  transaction.rs
