[package]
name = "geyser-websocket-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#solana dependencies
agave-geyser-plugin-interface = "=1.18.23"
solana-logger = "=1.18.23"
solana-sdk = "=1.18.23"
solana-transaction-status = "=1.18.23"
solana-account-decoder = "=1.18.23"
solana-rpc-client-api = "=1.18.23"

serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
jsonrpsee = {version = "0.20.4", features = ["full", "macros"]}
tracing = "0.1.40"
anyhow = "1.0.89"