[package]
name = "geyser-websocket-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#solana dependencies
agave-geyser-plugin-interface = "=2.0.16"
solana-logger = "=2.0.16"
solana-sdk = "=2.0.16"
solana-transaction-status = "=2.0.16"
solana-account-decoder = "=2.0.16"
solana-rpc-client-api = "=2.0.16"

serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
jsonrpsee = {version = "0.20.4", features = ["full", "macros"]}
tracing = "0.1.40"
anyhow = "1.0.89"
socket2 = "0.5.7"
dashmap = "6.1.0"
metrics = "0.24.0"
metrics-exporter-prometheus = "=0.15.0"
